# sgEvolver

./: .gitignore  autogen.sh  configure.ac  sgEvolver.mcp
include/: Mutator.h  PhyloTree.h
projects/: maf2xmfa.vcproj  scoreAlignment2.vcproj  sgEvolver.vcproj
src/: Alignment.cpp  Alignment.h  Makefile.am  Mutator.cpp  Mutator.h  PhyloTree.cpp  PhyloTree.h  breakSimulatedGenomeOnAncestralContigs.cpp  getopt.c  gnGapSource.cpp  gnStringSource.cpp  maf2xmfa.cpp  memsApp.cpp  mfaToMultiFiles.cpp  scoreAlignment2.cpp  scoregen.pl  sgEvolver.cpp  simujobgen.pl  simujobparams.pm  simujobrun.pl
